# playground_openapi

./: generate.sh  pet_shop_api.json  readme.md
app/: openapi.yaml  setup.cfg
app/.openapi-generator/: FILES
app/src/openapi_server/: main.py
app/src/openapi_server/apis/: default_api.py  default_api_base.py
app/src/openapi_server/models/: new_pet.py  pet.py
app/tests/: test_default_api.py
